--- a/package.json
+++ b/package.json
@@ -10,19 +10,15 @@
     "grunt-contrib-uglify": "^0.8.0"
   },
   "devDependencies": {
-    "amdclean": "^2.4.0",
     "connect-livereload": "^0.5.3",
     "grunt": "^0.4.5",
-    "grunt-bowercopy": "^1.2.0",
     "grunt-browserify": "^3.3.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "^0.7.0",
-    "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-uglify": "^0.8.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-usemin": "^3.0.0"
+    "grunt-contrib-watch": "^0.6.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -31,6 +27,6 @@
     "type": "git",
     "url": "https://atoft@bitbucket.org/atoft/marktex.git"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Andreas og Anders LIME",
+  "license": "MIT"
 }
