--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "angular-sanitize": "~1.3.13",
     "bootstrap": "~3.3.2",
     "angular-ui-bootstrap": "~0.12.0",
-    "angular-bootstrap": "~0.12.0"
+    "angular-bootstrap": "~0.12.0",
+    "angular-route": "~1.3.13"
   }
 }
