--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "grunt-contrib-uglify": "^0.8.0"
   },
   "devDependencies": {
+    "connect": "^3.3.4",
     "connect-livereload": "^0.5.3",
+    "cors": "^2.5.3",
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.3.0",
     "grunt-contrib-clean": "^0.6.0",
@@ -18,7 +20,8 @@
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-uglify": "^0.8.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "serve-static": "^1.9.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
