--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "serve-static": "^1.9.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "echo postinstall time; ./node_modules/grunt-cli/bin/grunt heroku"
   },
   "repository": {
     "type": "git",
