--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
+  "engines": {
+    "node": "0.10.x"
+  }
   "dependencies": {
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.3.0",
