--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.3.0",
     "grunt-contrib-jshint": "^0.11.0",
-    "grunt-contrib-uglify": "^0.8.0"
-  },
-  "devDependencies": {
+    "grunt-contrib-uglify": "^0.8.0",
     "connect": "^3.3.4",
     "connect-livereload": "^0.5.3",
     "cors": "^2.5.3",
