--- a/bower.json
+++ b/bower.json
@@ -26,5 +26,8 @@
     "angular-ui-bootstrap": "~0.12.0",
     "angular-bootstrap": "~0.12.0",
     "angular-route": "~1.3.13"
+  },
+  "resolutions": {
+    "angular": "1.2.10"
   }
 }
