--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node dist/index.js",
     "postinstall": "./node_modules/bower/bin/bower install"
   },
   "repository": {
