--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
   },
   "devDependencies": {
     "grunt-contrib-cssmin": "^0.12.2",
-    "grunt-contrib-htmlmin": "^0.4.0"
+    "grunt-contrib-htmlmin": "^0.4.0",
+    "grunt-contrib-jshint": "^0.11.0"
   }
 }
