--- a/package.json
+++ b/package.json
@@ -116,8 +116,10 @@
     ]
   },
   "devDependencies": {
+    "compression": "^1.4.1",
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-htmlmin": "^0.4.0",
-    "grunt-contrib-jshint": "^0.11.0"
+    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-git-describe": "^2.3.2"
   }
 }
