--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "bootstrap": "~3.3.2",
     "angular-ui-bootstrap": "~0.12.0",
     "angular-bootstrap": "~0.12.0",
-    "angular-route": "~1.3.13"
+    "angular-route": "~1.3.13",
+    "ng-facebook": "~0.1.6"
   },
   "resolutions": {
     "angular": "1.3.13"
