--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "browserify-shim": "^3.8.3",
     "grunt-text-replace": "^0.4.0",
     "uglifyify": "^3.0.1",
-    "compression": "^1.4.1"
+    "compression": "^1.4.1",
+    "grunt-connect-rewrite": "^0.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -119,6 +120,7 @@
   },
   "devDependencies": {
     "grunt-angular-templates": "^0.5.7",
+    "grunt-connect-route": "^0.2.7",
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-htmlmin": "^0.4.0",
     "grunt-contrib-jshint": "^0.11.0",
