major cleanup. menu directive. animations on view transitions

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "config": "./tmp/config.js",
     "uilayout": "./components/angular-ui-layout/ui-layout.js",
     "angularroute": "./bower_components/angular-route/angular-route.js",
+    "angularanimate": "./bower_components/angular-animate/angular-animate.js",
     "uiace": "./bower_components/angular-ui-ace/ui-ace.js",
     "showdownmathjax": "./components/showdown.mathjax.js",
     "showdownlinebreak": "./components/showdown.linebreak.js",
@@ -96,6 +97,11 @@
         "angular"
       ]
     },
+    "angularanimate": {
+      "depends": [
+        "angular"
+      ]
+    },
     "uiace": {
       "depends": [
         "angular"
@@ -121,6 +127,7 @@
   "devDependencies": {
     "grunt-angular-templates": "^0.5.7",
     "grunt-connect-route": "^0.2.7",
+    "grunt-contrib-compass": "^1.0.1",
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-htmlmin": "^0.4.0",
     "grunt-contrib-jshint": "^0.11.0",
