--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "angular-ui-bootstrap": "~0.12.0",
     "angular-bootstrap": "~0.12.0",
     "angular-route": "~1.3.13",
-    "ng-facebook": "~0.1.6"
+    "ng-facebook": "~0.1.6",
+    "angular-animate": "~1.3.14"
   },
   "resolutions": {
     "angular": "1.3.13"
