--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "angular-bootstrap": "~0.12.0",
     "angular-route": "~1.3.13",
     "ng-facebook": "~0.1.6",
-    "angular-animate": "~1.3.14"
+    "angular-animate": "~1.3.14",
+    "angular-cookies": "~1.3.14"
   },
   "resolutions": {
     "angular": "1.3.13"
