basic attribute maintenance for documents. title, removal and sharing

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "angularroute": "./bower_components/angular-route/angular-route.js",
     "angularanimate": "./bower_components/angular-animate/angular-animate.js",
     "angularcookies": "./bower_components/angular-cookies/angular-cookies.js",
+    "uiselect": "./components/ui-select/select.js",
     "uiace": "./bower_components/angular-ui-ace/ui-ace.js",
     "showdownmathjax": "./components/showdown.mathjax.js",
     "showdownlinebreak": "./components/showdown.linebreak.js",
@@ -85,6 +86,11 @@
       ]
     },
     "uibootstrap": {
+      "depends": [
+        "angular"
+      ]
+    },
+    "uiselect": {
       "depends": [
         "angular"
       ]
