--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "angular-route": "~1.3.13",
     "ng-facebook": "~0.1.6",
     "angular-animate": "~1.3.14",
-    "angular-cookies": "~1.3.14"
+    "angular-cookies": "~1.3.14",
+    "ui-select": "*"
   },
   "resolutions": {
     "angular": "1.3.13"
