minor fixes and clean up all around

--- a/package.json
+++ b/package.json
@@ -7,26 +7,27 @@
     "node": "0.10.x"
   },
   "dependencies": {
-    "grunt": "^0.4.5",
-    "grunt-browserify": "^3.3.0",
-    "grunt-contrib-jshint": "^0.11.0",
-    "grunt-contrib-uglify": "^0.8.0",
-    "connect": "^3.3.4",
-    "connect-livereload": "^0.5.3",
-    "cors": "^2.5.3",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-copy": "^0.7.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "serve-static": "^1.9.1",
+    "angular-moment": "^0.9.0",
     "bower": "^1.3.12",
     "browserify": "^9.0.3",
     "browserify-shim": "^3.8.3",
-    "uglifyify": "^3.0.1",
     "compression": "^1.4.1",
+    "connect": "^3.3.4",
+    "connect-livereload": "^0.5.3",
+    "cors": "^2.5.3",
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^3.3.0",
     "grunt-connect-rewrite": "^0.2.1",
-    "grunt-contrib-compass": "^1.0.1"
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-compass": "^1.0.1",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-uglify": "^0.8.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "serve-static": "^1.9.1",
+    "uglifyify": "^3.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -53,6 +54,8 @@
     "angularroute": "./bower_components/angular-route/angular-route.js",
     "angularanimate": "./bower_components/angular-animate/angular-animate.js",
     "angularcookies": "./bower_components/angular-cookies/angular-cookies.js",
+    "moment": "./bower_components/moment/moment.js",
+    "angular-moment": "./node_modules/angular-moment/angular-moment.js",
     "uiselect": "./components/ui-select/select.js",
     "uiace": "./bower_components/angular-ui-ace/ui-ace.js",
     "showdownmathjax": "./components/showdown.mathjax.js",
