--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,9 @@
     "ng-facebook": "~0.1.6",
     "angular-animate": "~1.3.14",
     "angular-cookies": "~1.3.14",
-    "ui-select": "*"
+    "ui-select": "*",
+    "moment": "~2.9.0",
+    "angular-moment": "~0.9.0"
   },
   "resolutions": {
     "angular": "1.3.13"
