--- a/bower.json
+++ b/bower.json
@@ -28,8 +28,7 @@
     "angular-animate": "~1.3.14",
     "angular-cookies": "~1.3.14",
     "ui-select": "*",
-    "moment": "~2.9.0",
-    "angular-moment": "~0.9.0"
+    "moment": "~2.9.0"
   },
   "resolutions": {
     "angular": "1.3.13"
