--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
+    "primus": "^2.4.12",
     "serve-static": "^1.9.1",
+    "share-primus": "^0.1.3",
     "uglifyify": "^3.0.1"
   },
   "scripts": {
@@ -62,7 +64,9 @@
     "showdownlinebreak": "./components/showdown.linebreak.js",
     "sharejs": "./components/sharejs/share.js",
     "ngFacebook": "./bower_components/ng-facebook/ngFacebook.js",
-    "katex": "./components/katex/katex.min.js"
+    "katex": "./components/katex/katex.min.js",
+    "primus-client": "./components/sharejs/primus-client.js",
+    "share-primus": "./components/sharejs/share-primus.js"
   },
   "browserify-shim": {
     "jquery": "$",
