--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
+    "ot-json0": "^1.0.1",
+    "ot-text": "^1.0.1",
+    "ot-text-tp2": "^1.0.0",
     "primus": "^2.4.12",
     "serve-static": "^1.9.1",
     "share-primus": "^0.1.3",
