--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect": "^3.3.4",
     "connect-livereload": "^0.5.3",
     "cors": "^2.5.3",
+    "derby": "^0.6.0-alpha59",
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.3.0",
     "grunt-connect-rewrite": "^0.2.1",
