--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "angular-animate": "~1.3.14",
     "angular-cookies": "~1.3.14",
     "ui-select": "*",
-    "moment": "~2.9.0"
+    "moment": "~2.9.0",
+    "ace-builds": "1.1.9"
   },
   "resolutions": {
     "angular": "1.3.13"
