--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "connect": "^3.3.4",
     "connect-livereload": "^0.5.3",
     "cors": "^2.5.3",
-    "derby": "^0.6.0-alpha59",
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.3.0",
     "grunt-connect-rewrite": "^0.2.1",
@@ -27,9 +26,7 @@
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
-    "ot-json0": "^1.0.1",
-    "ot-text": "^1.0.1",
-    "ot-text-tp2": "^1.0.0",
+    "share": "git+https://github.com/share/ShareJS.git",
     "primus": "^2.4.12",
     "serve-static": "^1.9.1",
     "share-primus": "^0.1.3",
@@ -67,7 +64,7 @@
     "uiace": "./bower_components/angular-ui-ace/ui-ace.js",
     "showdownmathjax": "./components/showdown.mathjax.js",
     "showdownlinebreak": "./components/showdown.linebreak.js",
-    "sharejs": "./components/sharejs/client/index.js",
+    "sharejs": "./node_modules/share/lib/client/index.js",
     "ngFacebook": "./bower_components/ng-facebook/ngFacebook.js",
     "katex": "./components/katex/katex.min.js",
     "primus-client": "./components/sharejs/primus-client.js",
