--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular-ui-ace": "bower",
+    "angular-ui-ace": "0.2.3",
     "angular": "1.3.13",
     "jquery": "2.1.1",
     "angular-sanitize": "~1.3.13",
@@ -28,9 +28,10 @@
     "angular-cookies": "~1.3.14",
     "ui-select": "*",
     "moment": "~2.9.0",
-    "ace-builds": "1.1.9"
+    "ace-builds": "1.2.0"
   },
   "resolutions": {
-    "angular": "1.3.13"
+    "angular": "1.3.13",
+    "ace-builds": "1.1.9"
   }
 }
