--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,9 @@
     "angular-cookies": "~1.3.14",
     "ui-select": "*",
     "moment": "~2.9.0",
-    "ace-builds": "1.2.0"
+    "ace-builds": "1.2.0",
+    "file-saver.js": "~1.20150507.2",
+    "angular-file-upload": "~2.1.4"
   },
   "resolutions": {
     "angular": "1.3.13",
